--- a/MeetingNotes/20210728.md
+++ b/MeetingNotes/20210728.md
@@ -35,9 +35,12 @@ Apologies:
 ## Text: 
 
 Today’s is the check-in meeting before the deadline on August 6th, next Fri. August is publication month. A5 have emailed that there will be event for specifications on Oct 26th, 3 PM.
+
 Reviews for group 4 and 5 specs are closed, summaries have been sent out. 
+
 DILCIS – Work with AIP white paper is ongoing. We’ve got one reply, vocabulary work have been started, ongoing. M2.5 is ready, as well as M2.4. (one for endorsement and one for certification). 
 The result from the validation level is finished and the DILCIS board will vote on it according to its procedures. 
+
 SM Q about guidelines (GL). GLs are going to be published with spec-s by Aug 6th. We need to think (but not before this project is over) how people can contribute to updating GL-s, how they should be published. Can they just update or do we need some sort of review period etc.   
 PT comments that in terms of CITS SIARD and its GL it should somehow live in the interest group. KB we only have that for SIARD. We have to keep the spec with the GL, but somehow we need to keep easy access to the public too. 
 GZ Q about having the geo form for DLM to be the group to take care of GL for SIARD, or should we have different organizational relations to it? KB can't answer now, please wait until we have looked into it. 
@@ -46,10 +49,12 @@ GZ Q about having the geo form for DLM to be the group to take care of GL for SI
 
 Overall admin: Recent all staff meeting has been cleared out what’s been going on. 
 
-*IP-s*/ KB: ASAP we have the publication ready we can check the issues. IPs are in a stable mode and we don’t to updates too easy. One thing is the value list for CITS, KB is working with that and creating the 1st version of that.
+*IP-s*/ KB: ASAP we have the publication ready we can check the issues. IPs are in a stable mode and we don’t to updates too easy. KB is working with the value list for CITS and creating the 1st version of that.
                                                                                                                 
 *SIARD*/ PT: ABN is on vacation but finished the updates SIARD RFC, 2.2 before that. Left the opportunity if people would come with any comments, they should reply. This far no replies, it is ready to be uploaded to Drive, PT will close that on FRI. 
+
 For CITS SIARD we’ve made amendments, everything looks fine and we can upload all before Aug 6. 
+
 News about interest group: KA is in charge of the host, from the DILCIS board side the mailing list will come out soon. PT will send the latest ver of CITS SIARD to CW who will be looking at the validation. PT will put it together on FRI afternoon. 
 
 *Geodata +GIS*/ GZ reports about replies for the CITS and the GL-s. Answering the questions, the rest of the team is on vacation. Most of the comments were from DNA and we can answer rather quickly. 
