--- a/MeetingNotes/20210728.md
+++ b/MeetingNotes/20210728.md
@@ -72,6 +72,8 @@ News about interest group: KA is in charge of the host, from the DILCIS board si
 *Guidelines and procedures*/ KB: Procedures have been overhauled to language check, validatability will have its own procedure. MF comments it would be nicer to have them in a single document, to be embedded. KB wants to keep them separate because we want people to get changes to GL-s, which will be published in August. It's easier to manage in two different documents. 
                                                                                                                           
 *Endorsement and certification*/ KB: last language checks and uploads to Drive.
+
+Work continues to get all ready by Aug 6th, link to the publications in Drive: https://drive.google.com/drive/u/1/folders/1tm7cMj-SoSyiNE8_EPfvn__rjvFjORDp
  
 
 The next meeting is on Aug 11th 
