--- a/MeetingNotes/20210908.md
+++ b/MeetingNotes/20210908.md
@@ -37,16 +37,20 @@ Apologies:
 
 The next A2 meeting is on Oct 6th.
 All CITS, procedures and guidelines were published, but there is still work to do. 
+
 Specifications event will be held on 26th of Oct. KB shares the draft agenda and explains the full list of activities: (folder 23) https://docs.google.com/document/d/1ZmJy7I-WfdcBfNfz1i_qItrJkMyw6tYciEMoE-n1TD0/edit#heading=h.i87llnv2wjch
-The registration form is up and three questions giving a hint about participants interests. Opinions and thoughts are welcome! One person as a speaker is needed per each CITS team for a 10-minute presentation who also should be hanging around for the question part.  A master slide deck will be available ASAP. JA adds the fact that 95% of solution providers have answered they are going to use specifications! 
+The registration form is up and three questions giving a hint about participants interests. Opinions and thoughts are welcome! 
+
+NB! One person as a speaker is needed per each CITS team for a 10-minute presentation who also should be hanging around for the question part.  A master slide deck will be available ASAP. JA adds the fact that 95% of solution providers have answered they are going to use specifications! 
 
 DILCIS board: SS is working with AIP. 
 
 IP-s: Updates need to be done in IP-s, following new CITS and issues in GH. We need to be ready for publication by Oct 15th (4 documents).  It's two weeks before the specs event. 
 MF Q about the deadline of new issue regarding SIP in GH – confirmed, this also by Oct 15th. 
 
-Regarding specs, everything is published, for SIARD we have an email list on its way.  We have been earlier with endorsements and certification milestones – already done!  
+Regarding specs, everything is published, for SIARD we have an email list on its way. We have been earlier with endorsements and certification milestones – already done!  
 ABN adds they have a few tasks here and there, still work with user groups as such, few people asking questions regarding specs, replying them the informal way. KB comments that it’s not easy to put a formal way how to do that. We should not do major updates in IPs in a couple of years, but we need to take care of questions and if needed, we can set up extra DILCIS board meetings as since Nov DILCIS Board is handling all specs.  In regards to eHealth the DILCIS Board need to ask questions from AP and SM to be able to respond. All specs have a repository in GH. 
+
 ABN Q about spec event information on web and calendar.  JA comments that we are expecting support from people doing the website, there is a proper event page. We can send out preliminary invitations to calendars. 
 
 JA introduces the work done with a validatablity/ Interoperability Assessment Framework. CW and MF comment, mostly the work is done. MF have to put up some issues to GH, DILCIS board is the one to approve the assessment. CW and MF will do assessment examples in the appendix. In the conclusion, there are comments and discussions. MF will add a paragraph that first is self-assessment by the owner of the particular CITS and then validated/approved by DILCIS Board. For changes CW left the tracking seen, MF will make a copy of the file. 
