--- a/MeetingNotes/20211006.md
+++ b/MeetingNotes/20211006.md
@@ -12,7 +12,7 @@ EARK3 A2 meeting on 6th of Oct 2021
 • Karin Oolu DLM (EasyLean OÜ)
 • Miguel Ferreira (KEEP Solutions)
 • Stephen Mackey (PIQL)
-• Sven Schlarb (Swiss Federal Archives)
+• Sven Schlarb (AIT)
 
 Apologies: 
 • Anders Bo Nielsen (Danish National Archives)
