--- a/MeetingNotes/20210908.md
+++ b/MeetingNotes/20210908.md
@@ -17,7 +17,7 @@ EARK3 A2 meeting on 8th of Sep 2021
 • Miguel Ferreira (KEEP Solutions)
 • Phillip Tømmerholt (Danish National Archives)
 • Stephen Mackey (PIQL)
-• Sven Schlarb (Swiss Federal Archives)
+• Sven Schlarb (Austrian Institute of Technology)
 
 Apologies: 
 • Ane Hovdan (National Archives of Norway)
