--- a/MeetingNotes/20210811.md
+++ b/MeetingNotes/20210811.md
@@ -28,7 +28,7 @@ Apologies:
 • Miguel Ferreira (KEEP Solutions)
 • Markus Merenmies DLM (National Archives of Finland)
 • Martin Speller (OPF) 
-• Sven Schlarb (Swiss Federal Archives)
+• Sven Schlarb (Austrian Institute of Technology)
 • Vesa-Matti Ovaska DLM (National Archives of Finland)
 
 
