--- a/MeetingNotes/20210728.md
+++ b/MeetingNotes/20210728.md
@@ -27,7 +27,7 @@ Apologies:
 • Lars J Alvik (National Archives of Norway)
 • Markus Merenmies DLM (National Archives of Finland)
 • Martin Speller (OPF) 
-• Sven Schlarb (Swiss Federal Archives)
+• Sven Schlarb (Austrian Institute of Technology)
 • Vesa-Matti Ovaska DLM (National Archives of Finland)
 
 
