--- a/MeetingNotes/20210616.md
+++ b/MeetingNotes/20210616.md
@@ -28,7 +28,7 @@ Apologies:
 • Martin Speller (OPF) 
 • Miguel Ferreira (KEEP Solutions)
 • Phillip Tømmerholt (Danish National Archives)
-• Sven Schlarb (Swiss Federal Archives)
+• Sven Schlarb (Austrian Institute of Technology)
 • Vesa-Matti Ovaska DLM (National Archives of Finland)
 
 
