--- a/MeetingNotes/20210602.md
+++ b/MeetingNotes/20210602.md
@@ -13,7 +13,7 @@ EARK3 A2 meeting on 2nd of June 2021
 • Lauri Rätsep (National Archives of Estonia)
 • Miguel Ferreira (KEEP Solutions)
 • Phillip Tømmerholt (Danish National Archives)
-• Sven Schlarb (Swiss Federal Archives)
+• Sven Schlarb (Austrian Institute of Technology)
 • Stephen Mackey (PIQL)
 
 Apologies: 
