--- a/MeetingNotes/20210505.md
+++ b/MeetingNotes/20210505.md
@@ -15,7 +15,7 @@ EARK3 A2 meeting on 5th of May 2021
 • Lauri Rätsep (National Archives of Estonia)
 • Markus Merenmies DLM (National Archives of Finland)
 • Miguel Ferreira (KEEP Solutions)
-• Sven Schlarb (Swiss Federal Archives)
+• Sven Schlarb (Austrian Institute of Technology)
 • Stephen Mackey (PIQL)
 
 Apologies: 
