--- a/MeetingNotes/20210421.md
+++ b/MeetingNotes/20210421.md
@@ -19,7 +19,7 @@ EARK3 A2 meeting on 21th of Apr 2021
 • Lauri Rätsep (National Archives of Estonia)
 • Miguel Ferreira (KEEP Solutions)
 • Phillip Tømmerholt (Danish National Archives)
-• Sven Schlarb (Swiss Federal Archives)
+• Sven Schlarb (Austrian Institute of Technology)
 • Stephen Mackey (PIQL)
 
 Apologies: 
