--- a/MeetingNotes/20210407.md
+++ b/MeetingNotes/20210407.md
@@ -17,7 +17,7 @@ EARK3 A2 meeting on 7th of Apr 2021
 • Martin Speller (OPF) 
 • Miguel Ferreira (KEEP Solutions)
 • Phillip Tømmerholt (Danish National Archives)
-• Sven Schlarb (Swiss Federal Archives)
+• Sven Schlarb (Austrian Institute of Technology)
 • Stephen Mackey (PIQL)
 
 Apologies: 
