--- a/MeetingNotes/20210324.md
+++ b/MeetingNotes/20210324.md
@@ -19,7 +19,7 @@ EARK3 A2 meeting on 24th of Mar 2021
 • Markus Merenmies DLM (National Archives of Finland)
 • Miguel Ferreira (KEEP Solutions)
 • Phillip Tømmerholt (Danish National Archives)
-• Sven Schlarb (Swiss Federal Archives)
+• Sven Schlarb (Austrian Institute of Technology)
 • Stephen Mackey (PIQL)
 
 Apologies: 
