--- a/MeetingNotes/20210310.md
+++ b/MeetingNotes/20210310.md
@@ -15,7 +15,7 @@ EARK3 A2 meeting on 10th of Mar 2021
 • Martin Speller (OPF) 
 • Miguel Ferreira (KEEP Solutions)
 • Phillip Tømmerholt (Danish National Archives)
-• Sven Schlarb (Swiss Federal Archives)
+• Sven Schlarb (Austrian Institute of Technology)
 • Stephen Mackey (PIQL)
 
 Apologies: 
