--- a/MeetingNotes/20210210.md
+++ b/MeetingNotes/20210210.md
@@ -17,7 +17,7 @@ EARK3 A2 meeting on 10th of Feb 2021
 • Markus Merenmies DLM (National Archives of Finland)
 • Martin Speller (OPF) 
 • Miguel Ferreira (KEEP Solutions)
-• Sven Schlarb (Swiss Federal Archives)
+• Sven Schlarb (Austrian Institute of Technology)
 • Stephen Mackey (PIQL)
 
 Apologies: 
