--- a/MeetingNotes/20210127.md
+++ b/MeetingNotes/20210127.md
@@ -27,7 +27,7 @@ Apologies:
 • Janet Anderson (Highbury IVS)
 • Kuldar Aas (National Archives of Estonia)
 • Markus Merenmies DLM (National Archives of Finland)
-• Sven Schlarb (Swiss Federal Archives)
+• Sven Schlarb (Austrian Institute of Technology)
 • Stephen Mackey (PIQL)
 • Vesa-Matti Ovaska DLM (National Archives of Finland)
 
