--- a/MeetingNotes/20210113.md
+++ b/MeetingNotes/20210113.md
@@ -19,7 +19,7 @@ EARK3 A2 meeting on 13th of Jan 2021
 • Markus Merenmies DLM (National Archives of Finland)
 • Martin Speller (OPF) 
 • Phillip Tømmerholt (Danish National Archives)
-• Sven Schlarb (Swiss Federal Archives)
+• Sven Schlarb (Austrian Institute of Technology)
 • Stephen Mackey (PIQL)
 • Vesa-Matti Ovaska DLM (National Archives of Finland)
 
