--- a/MeetingNotes/20201209.md
+++ b/MeetingNotes/20201209.md
@@ -27,7 +27,7 @@ Apologies:
 • Martin Speller (OPF) 
 • Miguel Ferreira (KEEP Solutions)
 • Phillip Tømmerholt (Danish National Archives)
-• Sven Schlarb (Swiss Federal Archives)
+• Sven Schlarb (Austrian Institute of Technology)
 • Stephen Mackey (PIQL)
 • Vesa-Matti Ovaska DLM (National Archives of Finland)
 
