--- a/MeetingNotes/20201202.md
+++ b/MeetingNotes/20201202.md
@@ -29,7 +29,7 @@ Apologies:
 • Martin Speller (OPF) 
 • Miguel Ferreira (KEEP Solutions)
 • Phillip Tømmerholt (Danish National Archives)
-• Sven Schlarb (Swiss Federal Archives)
+• Sven Schlarb (Austrian Institute of Technology)
 
 
 
