--- a/MeetingNotes/20201111.md
+++ b/MeetingNotes/20201111.md
@@ -29,7 +29,7 @@ Apologies:
 • Henrik K. R. Jakobson (DNA)
 • Kuldar Aas (National Archives of Estonia)
 • Martin Speller (OPF) 
-• Sven Schlarb (Swiss Federal Archives)
+• Sven Schlarb (Austrian Institute of Technology)
 
 
 
