--- a/MeetingNotes/20201028.md
+++ b/MeetingNotes/20201028.md
@@ -20,7 +20,7 @@ EARK3 A2 meeting on 28th of Oct 2020
 • Miguel Ferreira (KEEP Solutions)
 • Phillip Tømmerholt (Danish National Archives)
 • Stephen Mackey (PIQL)
-• Sven Schlarb (Swiss Federal Archives)
+• Sven Schlarb (Austrian Institute of Technology)
 • Vesa-Matti Ovaska DLM (National Archives of Finland)
 
 Apologies: 
