--- a/MeetingNotes/20201014.md
+++ b/MeetingNotes/20201014.md
@@ -13,7 +13,7 @@ EARK3 A2 meeting on 14th of Oct 2020
 • Karin Oolu DLM (EasyLean OÜ)
 • Lars J Alvik (National Archives of Norway)
 • Lauri Rätsep (National Archives of Estonia)
-• Sven Schlarb (Swiss Federal Archives)
+• Sven Schlarb (Austrian Institute of Technology)
 • Vesa-Matti Ovaska DLM (National Archives of Finland)
 
 Apologies: 
