--- a/MeetingNotes/20200930.md
+++ b/MeetingNotes/20200930.md
@@ -18,7 +18,7 @@ EARK3 A2 meeting on 30th of Sep 2020
 • Miguel Ferreira (KEEP Solutions)
 • Phillip Tømmerholt (Danish National Archives)
 • Stephen Mackey (PIQL)
-• Sven Schlarb (Swiss Federal Archives)
+• Sven Schlarb (Austrian Institute of Technology)
 
 Apologies: 
 • Anja Paulič (Archives of the Republic of Slovenia) 
