--- a/MeetingNotes/20200916.md
+++ b/MeetingNotes/20200916.md
@@ -28,7 +28,7 @@ Apologies:
 • Arne-Kristian Groven (National Archives of Norway) 
 • Kuldar Aas (National Archives of Estonia)
 • Martin Speller (OPF)
-• Sven Schlarb (Swiss Federal Archives)
+• Sven Schlarb (Austrian Institute of Technology)
 • Stephen Mackey (PIQL)
 
 
