--- a/MeetingNotes/20200902.md
+++ b/MeetingNotes/20200902.md
@@ -16,7 +16,7 @@ EARK3 A2 meeting on 2nd of Sep 2020
 •	Markus Merenmies DLM (National Archives of Finland)
 •	Martin Speller (OPF)
 •	Miguel Ferreira (KEEP Solutions)
-•	Sven Schlarb (Swiss Federal Archives)
+•	Sven Schlarb (Austrian Institute of Technology)
 •	Stephen Mackey (PIQL)
 •	Phillip Tømmerholt (Danish National Archives)
 •	Vesa-Matti Ovaska DLM (National Archives of Finland)
