--- a/MeetingNotes/20200819.md
+++ b/MeetingNotes/20200819.md
@@ -29,7 +29,7 @@ Apologies:
 •	Jože Škofljanec (Archives of the Republic of Slovenia)
 •	Anja Paulič (Archives of the Republic of Slovenia) 
 •	Miguel Ferreira (KEEP Solutions)
-•	Sven Schlarb (Swiss Federal Archives)
+•	Sven Schlarb (Austrian Institute of Technology)
 
 
 ## Text: 
