--- a/MeetingNotes/20200812.md
+++ b/MeetingNotes/20200812.md
@@ -22,7 +22,7 @@ EARK3 A2 meeting on 12th of August 2020
 •	Martin Speller (OPF)
 •	Miguel Ferreira (KEEP Solutions)
 •	Stephen Mackey (PIQL)
-•	Sven Schlarb (Swiss Federal Archives)
+•	Sven Schlarb (Austrian Institute of Technology)
 •	Phillip Tømmerholt (Danish National Archives)
 •	Vesa-Matti Ovaska DLM (National Archives of Finland)
 
