--- a/MeetingNotes/20200722.md
+++ b/MeetingNotes/20200722.md
@@ -11,7 +11,7 @@ Attending:
 •	Jamie Kaminski (Highbury IVS)
 •	Karin Oolu DLM (EasyLean OÜ)
 •	Stephen Mackey (PIQL)
-•	Sven Schlarb (Swiss Federal Archives)
+•	Sven Schlarb (Austrian Institute of Technology)
 •	Vesa-Matti Ovaska DLM (National Archives of Finland)
 
 Apologies: 
