--- a/MeetingNotes/20200624.md
+++ b/MeetingNotes/20200624.md
@@ -22,7 +22,7 @@ Apologies:
 •         Anja Paulič (Archives of the Republic of Slovenia) 
 •         Arne-Kristian Groven (National Archives of Norway) 
 •         David Anderson (Highbury IVS)
-•         Sven Schlarb (Swiss Federal Archives)
+•         Sven Schlarb (Austrian Institute of Technology)
 •         Henrik K. R. Jakobson (DNA)
 •         Lars J Alvik (National Archives of Norway 
 •         Miguel Ferreira (KEEP Solutions)
