--- a/MeetingNotes/20200610.md
+++ b/MeetingNotes/20200610.md
@@ -14,7 +14,7 @@
 •	Lauri Rätsep (National Archives of Estonia) 
 •	Markus Merenmies DLM (National Archives of Finland)
 •	Stephen Mackey (PIQL)
-•	Sven Schlarb (Swiss Federal Archives)
+•	Sven Schlarb (Austrian Institute of Technology)
 •	Henrik K. R. Jakobson (DNA)
 
 Apologies: 
