--- a/MeetingNotes/20200527.md
+++ b/MeetingNotes/20200527.md
@@ -14,7 +14,7 @@
 •	Markus Merenmies DLM (National Archives of Finland)
 •	Miguel Ferreira (KEEP Solutions)
 •	Stephen Mackey (PIQL)
-•	Sven Schlarb (Swiss Federal Archives)
+•	Sven Schlarb (Austrian Institute of Technology)
 •	Vesa-Matti Ovaska DLM (National Archives of Finland)
 •	Martin Speller (OPF) 
 
