--- a/MeetingNotes/20200429.md
+++ b/MeetingNotes/20200429.md
@@ -18,7 +18,7 @@ Members:
 •	Miguel Ferreira (KEEP Solutions)
 •	Phillip Tømmerholt (Danish National Archives)
 •	Stephen Mackey (PIQL)
-•	Sven Schlarb (Swiss Federal Archives)
+•	Sven Schlarb (Austrian Institute of Technology)
 •	Vesa-Matti Ovaska DLM (National Archives of Finland)
 
 Text:
