--- a/MeetingNotes/20200415.md
+++ b/MeetingNotes/20200415.md
@@ -10,7 +10,7 @@ Members:
 •	Anders Bo Nielsen (Danish National Archives)
 •	Gregor Završnik (Geoarch)
 •	Carl Wilson (Stichting Open Preservation, OPF)
-•	Sven Schlarb (Swiss Federal Archives)
+•	Sven Schlarb (Austrian Institute of Technology)
 •	Jamie Kaminski (Highbury IVS)First 
 •	Karin Oolu DLM (EasyLean OÜ)
 •	Audun Lund (Swiss Federal Archives)
