--- a/MeetingNotes/20200401.md
+++ b/MeetingNotes/20200401.md
@@ -12,7 +12,7 @@ Minutes
 •	Gregor Završnik (Geoarch)
 •	Carl Wilson (Stichting Open Preservation, OPF)
 •	Jože Škofljanec (Archives of the Republic of Slovenia)
-•	Sven Schlarb (Swiss Federal Archives)
+•	Sven Schlarb (Austrian Institute of Technology)
 •	Jamie Kaminski (Highbury IVS)First 
 •	Janet Anderson (Highbury IVS)
 •	Karin Oolu DLM (EasyLean OÜ)
