--- a/MeetingNotes/20200226.md
+++ b/MeetingNotes/20200226.md
@@ -9,7 +9,7 @@ Minutes
 •	Anja Paulič (Archives of the Republic of Slovenia) 
 •	Anders Bo Nielsen (Danish National Archives)
 •	Jože Škofljanec (Archives of the Republic of Slovenia)
-•	Sven Schlarb (Swiss Federal Archives)
+•	Sven Schlarb (Austrian Institute of Technology)
 •	Jamie Kaminski (Highbury IVS)First 
 •	Janet Anderson (Highbury IVS)
 •	Audun Lund (Swiss Federal Archives)
