--- a/MeetingNotes/20200119.md
+++ b/MeetingNotes/20200119.md
@@ -16,7 +16,7 @@ Members:
 •	Anders Bo Nielsen (Danish National Archives)
 •	Phillip Tømmerholt (Danish National Archives)
 •	Gregor Završnik (Geoarch)
-•	Sven Schlarb (Swiss Federal Archives)
+•	Sven Schlarb (Austrian Institute of Technology)
 •	Ane Hovdan 
 
 Agenda: 
