--- a/MeetingNotes/20200115.md
+++ b/MeetingNotes/20200115.md
@@ -16,7 +16,7 @@ Members:
 •	Phillip Tømmerholt (Danish National Archives)
 •	Carl Wilson (Stichting Open Preservation, OPF)
 •	Gregor Završnik (Geoarch)
-•	Sven Schlarb (Swiss Federal Archives)
+•	Sven Schlarb (Austrian Institute of Technology)
 
 Agenda: 
 
