Update 20230214 EARK CSP.md

--- a/MeetingNotes/2023/20230214 EARK CSP.md
+++ b/MeetingNotes/2023/20230214 EARK CSP.md
@@ -1,4 +1,4 @@
-undefined
+# 20230214 Coordination meeting for specifications maintenance
 ## Attendees
 Arne-Kristian Groven, Audun Lund, Gregor Završnik, John Mackey, Karin Bredenberg,Miguel Guimarães, Sven Schlarb
 ## Apologies
